[tool.poetry]
name = "rqlalchemy"
version = "0.3.0"
description = "\"Resource Query Language for SQLAlchemy\""
authors = ["Pedro Werneck <pjwerneck@gmail.com>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/pjwerneck/rqlalchemy"
homepage = "https://github.com/pjwerneck/rqlalchemy"

keywords = ['sqlachemy', 'sql', 'rql', 'querying', 'httpapi']

[tool.poetry.dependencies]
python = "^3.4"
pyrql = "^0.4.3"
sqlalchemy = "^1.2"

[tool.poetry.dev-dependencies]
pytest = ">=4.4.1"
mock = "^3.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
