[tool.poetry]
name = "rqlalchemy"
version = "0.6.0"
description = "\"Resource Query Language for SQLAlchemy\""
authors = ["Pedro Werneck <pjwerneck@gmail.com>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/pjwerneck/rqlalchemy"
homepage = "https://github.com/pjwerneck/rqlalchemy"

keywords = ['sqlachemy', 'sql', 'rql', 'querying', 'httpapi']

[tool.poetry.dependencies]
python = "^3.8"
pyrql = "^0.7.8"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
pytest = "^7.4.3"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = "True"
line_length = 99

[tool.pytest.ini_options]
pythonpath = [
  "."
]
